--- a/index.html
+++ b/index.html
@@ -7,65 +7,82 @@
   <meta name="keywords" content="Aleksei, Shakhov, cv, Resume">
   <meta name="description" content="Это сайт - резюме Алексея Шахова ">
   <title>Shakhov Aleksei Resume</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <img src="shakhov_alexey.jpg" alt="Шахов Алексей" width="300">
-<h1>Шахов Алексей</h1>
-<p>Я по образованию ин.женер-механик на автотранспорте. <br> Работаю инженером по гарантии и консультантом по сервису <strong> KIA, Hyundai.</strong></p>
-<p><em> В феврале 2022 года в Украине началась война,</em> сервис не работает.<br>  Появилось много свободного времени и я решил вспомнить верстку сайта, которую изучал 7 лет назад</p>
-<br>
-<h4>Список моих социальных сетей</h4>
-<a href="https://www.facebook.com/warranty.a" target="_blank">Facebook</a>
-|
-<a href="https://www.instagram.com/shakhovalex/" target="_blank">Instagram</a>
-<br>
-<h2>Мои хобби</h2>
-<ol>
-  <li>Автомобили</li>
-  <li>Рыбалка</li>
-  <li>Настольне игры</li>
-</ol>
-<h2>Опыт работы</h2>
-  <table>
-    <thead>
-      <tr>
-        <th>Название</th>
-        <th>Должность</th>
-        <th>Год</th>
-      </tr>
-    </thead>
-    <tr>
-      <td>ООО Алекс Восток</td>
-      <td>Старший мастер производства</td>
-      <td>2012-2015</td>
-    </tr>
-    <tr>
-      <td>ООО Днепр Автоцентр</td>
-      <td>Заместитель директора по сервису</td>
-      <td>2015-2018</td>
-    </tr>
-    <tr>
-      <td>ООО Олимп Мотор</td>
-      <td>Инженер по гарантии, консультант по сервису Hyundai, KIA</td>
-      <td>2018-2022</td>
-    </tr>
-  </table>
-  <h2>Связаться со мной</h2>
-  <form>
-  <div>
-    <label  for="name">Ваше имя:</label>
-    <input  type="text" id="name" placeholder="Введите ваше имя">
-  </div>
-  <div>
-    <label  for="Email">Ваш email:</label>
-    <input  type="email" id="Email" placeholder="Введите email">
-  </div>
-  <div>
-    <label  for="message">Ваше сообщение:</label>
-    <br>
-    <textarea id="message" cols="31" rows="5" placeholder=" Введите ваше сообщение..."></textarea>
-  </div>
-  <button type="submit">Отправить!!!</button>
-</form>
+  <div class="conteiner">
+    <div class="info">
+
+      <img src="shakhov_alexey.jpg" alt="Шахов Алексей" class="ava">
+      
+        <div class="info-text">
+            <h1>Шахов Алексей</h1>
+            <p>Я по образованию ин.женер-механик на автотранспорте. <br> Работаю инженером по гарантии и консультантом по сервису <strong> KIA, Hyundai.</strong></p>
+            <p> В феврале 2022 года в Украине началась война, сервис не работает.<br>  Появилось много свободного времени и я решил вспомнить верстку сайта, которую изучал 7 лет назад</p>
+            <br>
+            <h4>Список моих социальных сетей</h4>
+            <a href="https://www.facebook.com/warranty.a" target="_blank">Facebook</a>
+            |
+            <a href="https://www.instagram.com/shakhovalex/" target="_blank">Instagram</a>
+        </div>
+    </div>
+  <br>
+    <div class="card hobbi">
+      <h2>Мои хобби</h2>
+      <ol class="list">
+        <li>Автомобили</li>
+        <li>Рыбалка</li>
+        <li>Настольне игры</li>
+      </ol>
+    </div>
+    <div class="card exr">
+      <h2>Опыт работы</h2>
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Название</th>
+              <th>Должность</th>
+              <th>Год</th>
+            </tr>
+          </thead>
+          <tr>
+            <td>ООО Алекс Восток</td>
+            <td>Старший мастер производства</td>
+            <td>2012-2015</td>
+          </tr>
+          <tr>
+            <td>ООО Днепр Автоцентр</td>
+            <td>Заместитель директора по сервису</td>
+            <td>2015-2018</td>
+          </tr>
+          <tr>
+            <td>ООО Олимп Мотор</td>
+            <td>Инженер по гарантии, консультант по сервису Hyundai, KIA</td>
+            <td>2018-2022</td>
+          </tr>
+        </table>
+    </div>
+    <div class="card conn">
+        
+        <form class="form">
+          <h2>Связаться со мной</h2>
+        <div class="form-row">
+          <div class="form-group">
+            <label  for="name">Ваше имя:</label>
+            <input  type="text" id="name" placeholder="Введите ваше имя">
+          </div>
+          <div class="form-group">
+            <label  for="Email">Ваш email:</label>
+            <input  type="email" id="Email" placeholder="Введите email">
+          </div>
+        </div>
+        <div class="form-group">
+          <label  for="message">Ваше сообщение:</label>
+          <textarea id="message" cols="31" rows="5" placeholder=" Введите ваше сообщение..."></textarea>
+        </div>
+        <input type="submit" value="Отправить!" class="btn"></input>
+      </form>
+    </div>
+</div>
 </body>
 </html>
